--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,10 +1,23 @@
+@import 'mixins';
+@import 'variables';
+
 *,
-*::before,
-*::after {
+*::after,
+*::before {
     margin: 0;
     padding: 0;
+    font-family: 'Gilroy';
+    font-size: $regular-size;
+    box-sizing: border-box;
 }
 
 a {
     text-decoration: none;
+}
+
+button {
+    background-color: #fff;
+    border: none;
+    outline: none;
+    cursor: pointer;
 }
