--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -4,7 +4,8 @@ $middle-color: #f4f4f7;
 $light-color: #fafafa;
 
 //sizing
-$section-padding: 20px;
+$big-section-padding: 20px;
+$little-section-padding: 15px;
 $little-padding: 10px;
 $msgs-bid-margin: 25px;
 $msgs-little-margin: 18px;
