--- a/client/src/styles/messages.scss
+++ b/client/src/styles/messages.scss
@@ -9,6 +9,12 @@
         height: 100%;
         display: flex;
         flex-direction: column;
+        background-color: #fff;
+
+        &__text {
+            margin: auto;
+            font-size: 24px;
+        }
 
         &__header {
             // @include textLinesLimit(1);
@@ -18,7 +24,6 @@
             justify-content: flex-start;
             align-items: center;
             gap: 12px;
-            background-color: #fff;
 
             &_btn {
                 width: 24px;
@@ -171,9 +176,10 @@
         width: 100%;
         position: absolute;
         z-index: 1;
+        left: 100%;
 
-        &.hide {
-            display: none;
+        &.show {
+            left: 0;
         }
 
         &__header {
