user authentification based on cookie

--- a/client/src/styles/dialogs.scss
+++ b/client/src/styles/dialogs.scss
@@ -55,6 +55,7 @@
                     height: 50px;
                     border-radius: 50%;
                     background-color: $dark-color;
+                    object-fit: cover;
                 }
             }
 
