--- a/client/src/styles/dialogs.scss
+++ b/client/src/styles/dialogs.scss
@@ -92,6 +92,7 @@
                 width: 36px;
                 height: 36px;
                 border-radius: 50%;
+                object-fit: cover;
             }
 
             &_text {
