--- a/client/src/styles/dialogs.scss
+++ b/client/src/styles/dialogs.scss
@@ -99,6 +99,10 @@
         background-color: $dark-color;
       }
 
+      &:hover {
+        background-color: $middle-color;
+      }
+
       &_avatar {
         display: block;
         width: 36px;
